macros/tests/compile-fail/to_glue_row_on_enum.rs
use gluesql_macros::ToGlueRow;

#[derive(ToGlueRow)]
enum E {
    A,
}
