macros/tests/compile-fail/to_glue_row_on_enum.stderr
error: ToGlueRow can only be derived for structs
 --> tests/compile-fail/to_glue_row_on_enum.rs:4:1
  |
4 | enum E {
  | ^^^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/compile-fail/to_glue_row_on_enum.rs:6:2
  |
6 | }
  |  ^ consider adding a `main` function to `$DIR/tests/compile-fail/to_glue_row_on_enum.rs`
